#+options: title:t toc:nil
#+title: Changelog
#+language: en

* Changelog

** Unreleased
*** Added
- Implement support for the multipass opcodes, at least for the ones
  that do not require regular expressions, e.g. rules like
   #+begin_src
     pass2 @123 @15
   #+end_src
  should work now.
*** Changed
*** Deprecated
*** Removed
*** Fixed
*** Security

** 0.2.2 - 2025-12-01
*** Fixed
- Fix an infinite loop when backtranslating ~correct~ rules

** 0.2.1
*** Changed
- Make it clear that the library API is unstable