@@ -12,6 +12,9 @@
      pass2 @123 @15
    #+end_src
   should work now.
+- Tracing now works across all translation stages. If any rules for
+  pre and post translations are defined these translations are also
+  shown.
 *** Changed
 *** Deprecated
 *** Removed
